# SPA_add_comments

./: README.md  pyproject.toml
comments/comments/: settings.py  urls.py
comments_project/: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  requirements.txt
comments_project/comments/: forms.py  models.py  tests.py  urls.py  views.py
comments_project/comments/migrations/: 0001_initial.py  0002_remove_comment_captcha_remove_comment_home_page_and_more.py  0003_remove_comment_file.py  0004_remove_comment_image_comment_avatar_and_more.py  0005_remove_comment_avatar_comment_image_and_more.py
comments_project/comments/templates/comments/: comment_list.html
comments_project/comments_project/: settings.py  urls.py
comments_project/media/text_files/: camera_girl.txt
comments_project/text_files/: Новий_текстовий_документ_jN3Hukj.txt
