[tool.poetry]
name = "spa-add-comments"
version = "0.1.0"
description = ""
authors = ["Ruslan2512 <ruslansirenko25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
pillow = "^10.3.0"
captcha = "^0.5.0"
django-simple-captcha = "^0.6.0"
lxml = "^5.2.2"
lxml-html-clean = "^0.1.1"
requests = "^2.32.3"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
